# timers

./: bun.lockb  package-lock.json  package.json
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  file.db  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/configuration/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/timers/: entries.rs  mod.rs  notifications.rs  statistics.rs  today.rs
src/components/: activeTimer.tsx  countdownTimer.tsx  newTimer.tsx
src/components/timersTable/: columns.tsx  data-table.tsx  index.tsx
